--- a/src/componets/bannner.css
+++ b/src/componets/bannner.css
@@ -1,6 +1,5 @@
 .banner{
     display: block;
-    background-color: var(--green);
     color: white;
     margin: 0px;
     padding: .5rem;
@@ -8,4 +7,11 @@
 }
 .banner:hover{
     color: white;
+}
+.bannercontainer{
+    background-color: var(--green);
+}
+.bannerflex{
+    display: flex;
+    justify-content: center;
 }
