--- a/src/componets/contactusv2.css
+++ b/src/componets/contactusv2.css
@@ -1,5 +1,4 @@
 .contactus{
-    color: black;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
@@ -19,7 +18,6 @@
 
 
     a{
-        background-color: white;
         width: 10rem;
         color: black;
         border: 1px black solid;
@@ -40,9 +38,9 @@
         justify-content: space-evenly;
         flex-direction: column;
         a{
-            background-color: white;
+            background-color: var(--primary-color);
             width: 75%;
-            color: black;
+            color: var(--text-color);
             border: 1px black solid;
             border-radius: 5px;
             margin: 1rem;
@@ -72,8 +70,8 @@
 
         a{
             cursor: pointer;
-            background-color: white;
-            color: black;
+            background-color: var(--primary-color);
+            color: var(--text-color);
             border: 1px black solid;
             border-radius: 5px;
             margin: 1rem;
@@ -113,6 +111,9 @@
     }
     iframe{
         width: 50%;
+        @media (prefers-color-scheme: dark) {
+            filter: brightness(85%)
+        }
     }
     .socials svg{
         height: 3rem;
