--- a/src/componets/splash.css
+++ b/src/componets/splash.css
@@ -1,14 +1,23 @@
 .splash{
-    background-image: url("../assets/b1.jpg");
-    background-size: cover;
-    background-position-x: center;
-    box-shadow: 0 3000px rgba(32, 157, 80,.5) inset;
+   
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    aspect-ratio: 1.5/1;
+    height: 900px;
+    
     .centered{
         width: 60%;
+    }
+    button{
+        background-color: white;
+        color: black;
+    }
+    h1{
+        color: white;
+        font-stretch: expanded;
+    }
+    h3{
+        color: white;
     }
 }
