--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,30 @@
 :root {
-  --green: rgb(32, 157, 80);
+  ---green: #209d50;
+  --green: #16351b;
 
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
+
   --color: rgba(255, 255, 255, 0.87);
-  
-  --background-color: #242424;
-  background-color: white;
+  --background-color: #ffffff;
+  --text-color: black;
+  --primary-colour: #313131;
+  --form-color: ghostwhite;
+
+  .dark{
+    --color: rgba(255, 255, 255, 0.87);
+    
+    --background-color: #242424;
+    --text-color: white;
+    ---primary-color: #424242;
+    --primary-color: #16351b;
+    --form-color: var(--primary-color)
+  }
+  background-color: var(--background-color);
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -25,13 +40,7 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+
 
 h1 {
   font-size: 3.2em;
@@ -57,15 +66,3 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
