--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,12 @@
 .anchor{
   display: block;
   position: relative;
-  top: -130px;
+  top: -250px;
+  visibility: hidden;
+}
+.anchorbig{
+  position: relative;
+  top: -1000px;
   visibility: hidden;
 }
 #root {
