--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,20 @@
-#myroot {
-  max-width: 1200px;
-  min-width: 850px;
-  margin: 0 auto;
-  text-align: center;
-  background-color: var(--background-color);
+
+@media screen and (min-width: 900px) {
+  #myroot {
+    max-width: 1200px;
+    min-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: var(--background-color);
+  }
+}
+@media screen and (max-width: 900px) {
+  #myroot {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    background-color: var(--background-color);
+  }
 }
 
 .app-wrapper{
