--- a/src/componets/cardBox.css
+++ b/src/componets/cardBox.css
@@ -1,4 +1,21 @@
-.cardBox {
+.cardbox {
+    background-color: var(--primary-color);
+    color: var(--text-color);;
+    padding: 1rem;
+    border-radius: 6px;
+    margin: 1rem;
+    width: 16rem;
+    min-width: 16rem;
+    max-height: 16rem;
+    aspect-ratio: 1;
+    flex: 1 1 25%;
+    --border-right: 4px solid var(--green);
+    --border-bottom: 4px solid var(--green);
+
+
+    box-shadow: 2px 2px 8px var(--green);
+}
+.cardbox2 {
     background-color: var(--primary-color);
     color: var(--text-color);;
     padding: 1rem;
@@ -7,7 +24,7 @@
     width: 16rem;
     max-height: 16rem;
     aspect-ratio: 1;
-    flex: 1 1 25%;
+    flex: 1 1 34%;
     --border-right: 4px solid var(--green);
     --border-bottom: 4px solid var(--green);
 
