--- a/src/componets/splash.css
+++ b/src/componets/splash.css
@@ -4,11 +4,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 900px;
+    margin-bottom: 280px;
+    margin-top: 50px;
     
-    .centered{
-        width: 60%;
-    }
+
     button{
         background-color: white;
         color: black;
@@ -21,4 +20,14 @@
         color: white;
     }
     
+}
+@media screen and (max-width: 700px) {
+  
+}
+@media screen and (min-width: 700px) {
+    .splash{
+        .centered{
+            width: 60%;
+        }
+    }
 }
