--- a/src/pages/bootkamp.css
+++ b/src/pages/bootkamp.css
@@ -77,5 +77,9 @@ div .bootcamp{
                 border-radius: 10px;
             }
         }
+        .form-hidden{
+            display: none;
+        }
     }
+    
 }
