--- a/src/pages/popupPage.css
+++ b/src/pages/popupPage.css
@@ -8,4 +8,11 @@
     left: 0;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .space{
+        height: 100px;
+        width: 200px;
+    }
 }
