--- a/src/pages/reviews.css
+++ b/src/pages/reviews.css
@@ -13,6 +13,7 @@ background-position: bottom;
 
 .reviews{
     width: 60%;
+    min-width: min(400px,  100vw);
 .dot-bar{
     text-align:center
 }
@@ -32,7 +33,7 @@ background-position: bottom;
     
     display: flex;
     flex-direction: row;
-    height: 12rem;
+    height: 15rem;
     overflow: hidden;
     
 
@@ -73,6 +74,9 @@ h1{
     top: 0;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 background-color: transparent;
