--- a/src/componets/splash.css
+++ b/src/componets/splash.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     aspect-ratio: 2;
-    margin-bottom: 280px;
+    margin-bottom: 25dvh;
     margin-top: 50px;
     
 
