--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
   color-scheme: light dark;
 
-  --color: rgba(255, 255, 255, 0.87);
+  --color: rgb(116, 116, 116);
   --background-color: #ffffff;
   --text-color: black;
   --primary-colour: #313131;
