--- a/src/pages/rehab.css
+++ b/src/pages/rehab.css
@@ -53,10 +53,10 @@ div .rehab{
                 flex-grow: .75;
             }
             h1{
-                font-size:  5rem;
+                font-size: clamp(3rem, 5vw, 5rem);
             }
             h3{
-                font-size: 1.5rem;
+                font-size: clamp(1rem, 2.5vw, 1.5rem);
             }
             button{
                 width: 500px;
@@ -67,6 +67,7 @@ div .rehab{
                 float: end;
                 bottom: 0;
                 margin-top: 0;
+                font-size: clamp(.75rem, 2.5vw, 1.5rem);
                 
             }
 
