--- a/src/componets/popupform.css
+++ b/src/componets/popupform.css
@@ -1,4 +1,5 @@
 .form-section form {
+    overflow: scroll;
     color: black;
     display: flex;
     flex-direction: column;
@@ -51,7 +52,7 @@
     height: fit-content;
     justify-content: center;
     position: fixed;
-
+    overflow: scroll;
     
 }
 .form-section{
