Update CSS to use 'dvh' units for responsive height adjustments

--- a/src/componets/toggleMenu.css
+++ b/src/componets/toggleMenu.css
@@ -1,7 +1,7 @@
 .toggleMenu{
     width: 100%;
     position: fixed;
-    height: 100vh;
+    height: 100dvh;
     top: 93px;
     z-index: 1000;
     
