--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100dvh;
   flex-direction: column;
   
 }
