--- a/src/componets/homeImage.css
+++ b/src/componets/homeImage.css
@@ -8,7 +8,7 @@
         box-shadow: 0 3000px rgba(32, 157, 80,.5) inset;
         position: absolute;
         top: 0;
-        height: 100vh;
+        height: 100dvh;
         max-height: 1000px;
         max-width: 100%;
         aspect-ratio: 2/1;
@@ -24,7 +24,7 @@
         box-shadow: 0 3000px rgba(32, 157, 80,.5) inset;
         position: absolute;
         top: 0;
-        height: 100vh;
+        height: 100dvh;
         max-height: 1000px;
         width: 100%;
         overflow: hidden;
