--- a/src/pages/popupPage.css
+++ b/src/pages/popupPage.css
@@ -2,7 +2,7 @@
     position: fixed;
     background-color: rgb(128, 128, 128, .6);
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     z-index: 1000;
     top: 0;
     left: 0;
