--- a/src/componets/cardBox.css
+++ b/src/componets/cardBox.css
@@ -14,6 +14,9 @@
 
 
     box-shadow: 2px 2px 8px var(--green);
+    p{
+        margin: 5px;
+    }
 }
 .cardbox2 {
     background-color: var(--primary-color);
