--- a/src/componets/cardBox.css
+++ b/src/componets/cardBox.css
@@ -34,3 +34,16 @@
 
     box-shadow: 2px 2px 8px var(--green);
 }
+.cardbox3 {
+    background-color: var(--primary-color);
+    color: var(--text-color);;
+    padding: 1rem;
+    border-radius: 6px;
+    margin: 1rem;
+    width: 80%;
+    --border-right: 4px solid var(--green);
+    --border-bottom: 4px solid var(--green);
+
+
+    box-shadow: 2px 2px 8px var(--green);
+}
