--- a/src/componets/cardBox.css
+++ b/src/componets/cardBox.css
@@ -6,7 +6,7 @@
     margin: 1rem;
     width: 16rem;
     min-width: 16rem;
-    max-height: 20rem;
+    max-height: 22rem;
     aspect-ratio: 1;
     flex: 1 1 25%;
     --border-right: 4px solid var(--green);
@@ -28,6 +28,19 @@
     max-height: 16rem;
     aspect-ratio: 1;
     flex: 1 1 34%;
+    --border-right: 4px solid var(--green);
+    --border-bottom: 4px solid var(--green);
+
+
+    box-shadow: 2px 2px 8px var(--green);
+}
+.cardbox3 {
+    background-color: var(--primary-color);
+    color: var(--text-color);;
+    padding: 1rem;
+    border-radius: 6px;
+    margin: 1rem;
+    width: 80%;
     --border-right: 4px solid var(--green);
     --border-bottom: 4px solid var(--green);
 
